--- a/index.html
+++ b/index.html
@@ -12,21 +12,63 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Tic Tac Toe</h1>
-      <div class="row">
-            <div class="cell col-4 col-lg-4 box" data-cell>O</div>
-            <div class="cell col-4 col-lg-4 box" data-cell>X</div>
-            <div class="cell col-4 col-lg-4 box" data-cell>O</div>
-            <div class="cell col-4 col-lg-4 box" data-cell>O</div>
-            <div class="cell col-4 col-lg-4 box" data-cell>X</div>
-            <div class="cell col-4 col-lg-4 box" data-cell>X</div>
-            <div class="cell col-4 col-lg-4 box" data-cell>X</div>
-            <div class="cell col-4 col-lg-4 box" data-cell>O</div>
-            <div class="cell col-4 col-lg-4 box" data-cell>O</div>
+      <h1 id="title"> Tic Tac Toe </h1>
+
+      <section>
+      <div class="playground">
+         <div class="row">
+            <div class="col" data-cell>O</div>
+            <div class="col" data-cell>X</div>
+            <div class="col" data-cell>O</div>
+         </div>
+         <div class="row">
+            <div class="col" data-cell>O</div>
+            <div class="col" data-cell>X</div>
+            <div class="col" data-cell>X</div>
+        </div>
+        <div class="row">
+            <div class="col" data-cell>X</div>
+            <div class="col" data-cell>O</div>
+            <div class="col" data-cell>O</div>
+        </div>
       </div>
+
+    </section>
+
+    <section>
       <div class="winning-message" id="winning-message">
         <div data-winning-message-text></div>
         <button id="restart">Restart</button>
       </div>
+    </section>
+
+    <section>
+        <form id="sign-up-form">
+          <h3>Sign Up</h3>
+          <input id= "sign-up-email" name="credentials[email]" type="email" placeholder="Email"><br><br>
+          <input id= "sign-up-password" name="credentials[password]" type="password" placeholder="Password"><br><br>
+          <input id= "sign-up-password_confirmation" name="credentials[password_confirmation]" type="password" placeholder="Password Confirmation"><br><br>
+          <input type="submit" value="Sign up">
+        </form>
+    </section>
+        <br>
+    <section>
+        <form>
+          <h3>Sign In</h3>
+          <input name="credentials[email]" type="text" value="an@example.email"><br><br>
+          <input name="credentials[password]" type="password" value="an example password"><br><br>
+          <input type="submit" value="Sign In">
+        </form>
+    </section>
+        <br>
+    <section>
+        <form>
+          <h3>Change Password</h3>
+          <input name="passwords[old]" type="password"><br><br>
+          <input name="passwords[new]" type="password"><br><br>
+          <input type="submit" value="Change Password">
+        </form>
+    </section>
+
     </body>
 </html>
