--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <section>
         <form id="sign-up-form">
           <h3>Sign Up</h3>
+          <p id="message"></p>
           <input id= "sign-up-email" name="credentials[email]" type="email" placeholder="Email"><br><br>
           <input id= "sign-up-password" name="credentials[password]" type="password" placeholder="Password"><br><br>
           <input id= "sign-up-password_confirmation" name="credentials[password_confirmation]" type="password" placeholder="Password Confirmation"><br><br>
