--- a/index.html
+++ b/index.html
@@ -48,25 +48,27 @@
           <p id="message"></p>
           <input id= "sign-up-email" name="credentials[email]" type="email" placeholder="Email"><br><br>
           <input id= "sign-up-password" name="credentials[password]" type="password" placeholder="Password"><br><br>
-          <input id= "sign-up-password_confirmation" name="credentials[password_confirmation]" type="password" placeholder="Password Confirmation"><br><br>
+          <input id= "sign-up-password_confirmation" name="credentials[password_confirmation]" type="password" placeholder="Re-enter Password"><br><br>
           <input type="submit" value="Sign up">
         </form>
     </section>
         <br>
     <section>
-        <form>
+        <form id="sign-in-form">
           <h3>Sign In</h3>
-          <input name="credentials[email]" type="text" value="an@example.email"><br><br>
-          <input name="credentials[password]" type="password" value="an example password"><br><br>
+          <p id="message2"></p>
+          <input id= "sign-in-email" name="credentials[email]" type="email" placeholder="Email"><br><br>
+          <input id= "sign-in-password"name="credentials[password]" type="password" placeholder="Passwords"><br><br>
           <input type="submit" value="Sign In">
         </form>
     </section>
         <br>
     <section>
-        <form>
+        <form id="change-password-form">
           <h3>Change Password</h3>
-          <input name="passwords[old]" type="password"><br><br>
-          <input name="passwords[new]" type="password"><br><br>
+          <p id="message3"></p>
+          <input id="cp-old" name="passwords[old]" type="password" placeholder="Old Password"><br><br>
+          <input id="cp-new" name="passwords[new]" type="password" placeholder="New Password"><br><br>
           <input type="submit" value="Change Password">
         </form>
     </section>
