--- a/index.html
+++ b/index.html
@@ -69,7 +69,14 @@
           <p id="message3"></p>
           <input id="cp-old" name="passwords[old]" type="password" placeholder="Old Password"><br><br>
           <input id="cp-new" name="passwords[new]" type="password" placeholder="New Password"><br><br>
-          <input type="submit" value="Change Password">
+          <input type="submit" value="Change Password"><br><br>
+        </form>
+    </section>
+
+    <section>
+        <form id="sign-out-form">
+          <p id="message4"></p>
+        <input type="submit" value="Sign Out">
         </form>
     </section>
 
