--- a/index.html
+++ b/index.html
@@ -13,22 +13,26 @@
     </head>
     <body>
 
+    <section class="tittle">
+        <h1>Tic Tac Toe</h1>
+    </section>
+
       <div class="container">
-        <div class="row board h-100">
+        <div class="row h-100 board">
 
-            <div class="col-4 box"></div>
-            <div class="col-4 box"></div>
-            <div class="col-4 box"></div>
-
-
-            <div class="col-4 box"></div>
-            <div class="col-4 box"></div>
-            <div class="col-4 box"></div>
+            <div class="col-4 box" id="0"></div>
+            <div class="col-4 box" id="1"></div>
+            <div class="col-4 box" id="2"></div>
 
 
-            <div class="col-4 box"></div>
-            <div class="col-4 box"></div>
-            <div class="col-4 box"></div>
+            <div class="col-4 box" id="3"></div>
+            <div class="col-4 box" id="4"></div>
+            <div class="col-4 box" id="5"></div>
+
+
+            <div class="col-4 box" id="6"></div>
+            <div class="col-4 box" id="7"></div>
+            <div class="col-4 box" id="8"></div>
         </div>
       </div>
 
@@ -65,8 +69,14 @@
 
     <section>
         <form id="sign-out-form">
-          <p id="message4"></p>
+          <p id="message4">12</p>
         <input type="submit" value="Sign Out">
+        </form>
+    </section>
+
+    <section>
+        <form id="start-game">
+          <input type="submit" value="Start Game"><br><br>
         </form>
     </section>
 
