--- a/index.html
+++ b/index.html
@@ -17,32 +17,13 @@
         <h1>Tic Tac Toe</h1>
     </section>
 
-      <div class="container">
-        <div class="row h-100 board">
-
-            <div class="col-4 box" id="0"></div>
-            <div class="col-4 box" id="1"></div>
-            <div class="col-4 box" id="2"></div>
-
-
-            <div class="col-4 box" id="3"></div>
-            <div class="col-4 box" id="4"></div>
-            <div class="col-4 box" id="5"></div>
-
-
-            <div class="col-4 box" id="6"></div>
-            <div class="col-4 box" id="7"></div>
-            <div class="col-4 box" id="8"></div>
-        </div>
-      </div>
-
     <section>
         <form id="sign-up-form">
           <h3>Sign Up</h3>
           <p id="message"></p>
-          <input id= "sign-up-email" name="credentials[email]" type="email" placeholder="Email"><br><br>
-          <input id= "sign-up-password" name="credentials[password]" type="password" placeholder="Password"><br><br>
-          <input id= "sign-up-password_confirmation" name="credentials[password_confirmation]" type="password" placeholder="Re-enter Password"><br><br>
+          <input id= "sign-up-email" name="credentials[email]" type="email" placeholder="Email">
+          <input id= "sign-up-password" name="credentials[password]" type="password" placeholder="Password">
+          <input id= "sign-up-password_confirmation" name="credentials[password_confirmation]" type="password" placeholder="Re-enter Password">
           <input type="submit" value="Sign up">
         </form>
     </section>
@@ -51,8 +32,8 @@
         <form id="sign-in-form">
           <h3>Sign In</h3>
           <p id="message2"></p>
-          <input id= "sign-in-email" name="credentials[email]" type="email" placeholder="Email"><br><br>
-          <input id= "sign-in-password"name="credentials[password]" type="password" placeholder="Passwords"><br><br>
+          <input id= "sign-in-email" name="credentials[email]" type="email" placeholder="Email">
+          <input id= "sign-in-password"name="credentials[password]" type="password" placeholder="Passwords">
           <input type="submit" value="Sign In">
         </form>
     </section>
@@ -61,24 +42,44 @@
         <form id="change-password-form">
           <h3>Change Password</h3>
           <p id="message3"></p>
-          <input id="cp-old" name="passwords[old]" type="password" placeholder="Old Password"><br><br>
-          <input id="cp-new" name="passwords[new]" type="password" placeholder="New Password"><br><br>
+          <input id="cp-old" name="passwords[old]" type="password" placeholder="Old Password">
+          <input id="cp-new" name="passwords[new]" type="password" placeholder="New Password">
           <input type="submit" value="Change Password"><br><br>
         </form>
     </section>
 
     <section>
         <form id="sign-out-form">
-          <p id="message4">12</p>
+          <p id="message4"></p>
         <input type="submit" value="Sign Out">
         </form>
-    </section>
+    </section><br>
 
     <section>
+        <h1>Let's Play Tic Tac Toe</h1>
         <form id="start-game">
           <input type="submit" value="Start Game"><br><br>
         </form>
     </section>
+
+    <div class="container">
+      <div class="row h-100 board">
+
+          <div class="col-4 box" id="0"></div>
+          <div class="col-4 box" id="1"></div>
+          <div class="col-4 box" id="2"></div>
+
+
+          <div class="col-4 box" id="3"></div>
+          <div class="col-4 box" id="4"></div>
+          <div class="col-4 box" id="5"></div>
+
+
+          <div class="col-4 box" id="6"></div>
+          <div class="col-4 box" id="7"></div>
+          <div class="col-4 box" id="8"></div>
+      </div>
+    </div>
 
     </body>
 </html>
