--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </form>
     </section>
 
-    <div class="container">
+    <div class="container" id="board">
       <div class="row h-100 board">
 
           <div class="col-4 box" id="0"></div>
