--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
     </section><br>
 
     <section>
-        <h1>Let's Play Tic Tac Toe</h1>
+
         <form id="start-game">
           <input type="submit" value="Start Game"><br><br>
         </form>
     </section>
-
+        <p id="message5"></p>
     <div class="container" id="board">
       <div class="row h-100 board">
 
