--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <body>
 
     <section class="tittle">
-        <h1>Tic Tac Toe</h1>
+        <h1>Harvey's Tic Tac Toe</h1>
     </section>
 
     <section>
         <form id="sign-up-form">
           <h3>Sign Up</h3>
           <p id="message"></p>
-          <input id= "sign-up-email" name="credentials[email]" type="email" placeholder="Email">
-          <input id= "sign-up-password" name="credentials[password]" type="password" placeholder="Password">
-          <input id= "sign-up-password_confirmation" name="credentials[password_confirmation]" type="password" placeholder="Re-enter Password">
-          <input type="submit" value="Sign up">
+          <input id= "sign-up-email" name="credentials[email]" type="email" placeholder="Email"><br>
+          <input id= "sign-up-password" name="credentials[password]" type="password" placeholder="Password"><br>
+          <input id= "sign-up-password_confirmation" name="credentials[password_confirmation]" type="password" placeholder="Re-enter Password"><br><br>
+          <input type="submit" value="Sign up"><br><br>
         </form>
     </section>
         <br>
@@ -32,8 +32,8 @@
         <form id="sign-in-form">
           <h3>Sign In</h3>
           <p id="message2"></p>
-          <input id= "sign-in-email" name="credentials[email]" type="email" placeholder="Email">
-          <input id= "sign-in-password"name="credentials[password]" type="password" placeholder="Passwords">
+          <input id= "sign-in-email" name="credentials[email]" type="email" placeholder="Email"><br>
+          <input id= "sign-in-password"name="credentials[password]" type="password" placeholder="Passwords"><br><br>
           <input type="submit" value="Sign In">
         </form>
     </section>
@@ -56,7 +56,12 @@
     </section><br>
 
     <section>
+        <form id="play-times">
+          <p id="message6"></p>
+        </form>
+    </section>
 
+    <section>
         <form id="start-game">
           <input type="submit" value="Start Game"><br><br>
         </form>
