--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
 
-    <section class="tittle">
+    <section class="title">
         <h1>Harvey's Tic Tac Toe</h1>
     </section>
 
@@ -63,6 +63,7 @@
 
     <section>
         <form id="start-game">
+            <p id="message8"></p>
           <input type="submit" value="Start Game"><br><br>
         </form>
     </section>
