--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
-    <body>
+    <body id='body'>
 
     <section class="tittle">
         <h1>Harvey's Tic Tac Toe</h1>
