--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <section>
         <form id="sign-up-form">
-          <h4>Sign Up</h4>
+          <h5>Sign Up:</h5>
           <p id="message"></p>
           <input id= "sign-up-email" name="credentials[email]" type="email" placeholder="Email"><br>
           <input id= "sign-up-password" name="credentials[password]" type="password" placeholder="Password"><br>
@@ -30,7 +30,7 @@
         <br>
     <section>
         <form id="sign-in-form">
-          <h4>Sign In</h4>
+          <h5>Sign In:</h5>
           <p id="message2"></p>
           <input id= "sign-in-email" name="credentials[email]" type="email" placeholder="Email"><br>
           <input id= "sign-in-password"name="credentials[password]" type="password" placeholder="Passwords"><br><br>
@@ -40,7 +40,7 @@
         <br>
     <section>
         <form id="change-password-form">
-          <h4>Change Password</h4>
+          <h5>Change Password:</h5>
           <p id="message3"></p>
           <input id="cp-old" name="passwords[old]" type="password" placeholder="Old Password">
           <input id="cp-new" name="passwords[new]" type="password" placeholder="New Password">
