--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
     <section>
         <form id="sign-in-form">
           <h5>Sign In:</h5>
-          <p id="message2"></p>
+          <!-- <p id="message2"></p> -->
           <input id= "sign-in-email" name="credentials[email]" type="email" placeholder="Email"><br>
           <input id= "sign-in-password"name="credentials[password]" type="password" placeholder="Passwords"><br><br>
           <input type="submit" value="Sign In">
         </form>
+        <p id="message2"></p>
     </section>
         <br>
     <section>
